nest module 설치, 기본적인 디렉터리 구조 설정

--- a/Public/index.html
+++ b/Public/index.html
@@ -35,7 +35,9 @@
     <section id = "main-view">
 
       <div id="content-section">
-
+        <div id = "popular-sample-section"></div>
+        <div id = "news-section"></div>
+        
       </div>
 
 
