main server, client, dataServer 디렉터리 설정 및 작동 확인.

--- a/Client/index.html
+++ b/Client/index.html
@@ -57,11 +57,11 @@
       <div class = "info-view-container">
 
         <div id="login-section">
-          <form id = loginForm>
-            <input type="text" placeholder="id">
-            <input type="password" placeholder="pw">
-            <button type="submit">login</button>
-            <button type="submit">register</button>
+          <h2>LOGIN</h2>
+          <form id="login-form">
+            <input type="text" name="userEmail" placeholder="e-mail">
+            <input type="password" name="userPassword" placeholder="password">
+            <input type="submit" value="Login">
           </form>
         </div>
 
@@ -80,5 +80,6 @@
   
   </div>
 </body>
+<!-- <script src="./mainController.js" type="module"></script> -->
 <script src="./mainController.js" type="module"></script>
 </html>
