img tag add id attribute -> 'logo', add click event (on content-view)

--- a/Client/index.html
+++ b/Client/index.html
@@ -16,7 +16,7 @@
   <div id="root-container">
     <section id = "header-view">
       <div>
-        <img src="https://play.pokemonshowdown.com/sprites/ani/axew.gif" alt="">
+        <img src="https://play.pokemonshowdown.com/sprites/ani/axew.gif" alt="" id = "logo">
       </div>
       
       <div>
@@ -41,6 +41,7 @@
             <input type="password" name="userPassword" placeholder="password">
             <input type="submit" value="Login">
           </form>
+          <button id = "register">회원가입</a>
         </div>
 
         <div id="latest-content-section">
